[gd_scene load_steps=47 format=3 uid="uid://whppd8ma2wxx"]

[ext_resource type="Script" path="res://scenes/characters/irla_player.gd" id="1_oqj80"]
[ext_resource type="Texture2D" uid="uid://b82somlv0bmrj" path="res://art/olvira/olvira_idle-Sheet.png" id="2_k7ipe"]
[ext_resource type="Texture2D" uid="uid://de6gr7h0t478s" path="res://art/breef/animations/breef_lose.png" id="3_bwc6g"]
[ext_resource type="Texture2D" uid="uid://c3rifya643mga" path="res://art/breef/animations/breef_super_golpe-Sheet-no-color.png" id="4_jylc3"]
[ext_resource type="Texture2D" uid="uid://b4g6xh28sqsu6" path="res://art/breef/animations/breef_walk.png" id="5_bijay"]
[ext_resource type="FontFile" uid="uid://btpd2d0e87gb1" path="res://art/fonts/m6x11.ttf" id="6_73o0k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_88faq"]
atlas = ExtResource("2_k7ipe")
region = Rect2(0, 0, 86, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5dpw"]
atlas = ExtResource("2_k7ipe")
region = Rect2(86, 0, 86, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8xcm"]
atlas = ExtResource("2_k7ipe")
region = Rect2(172, 0, 86, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfstn"]
atlas = ExtResource("2_k7ipe")
region = Rect2(258, 0, 86, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqns8"]
atlas = ExtResource("2_k7ipe")
region = Rect2(344, 0, 86, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jvbe"]
atlas = ExtResource("2_k7ipe")
region = Rect2(430, 0, 86, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym8yy"]
atlas = ExtResource("2_k7ipe")
region = Rect2(516, 0, 86, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5vpu"]
atlas = ExtResource("2_k7ipe")
region = Rect2(602, 0, 86, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_s87i4"]
atlas = ExtResource("3_bwc6g")
region = Rect2(0, 0, 81, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxulh"]
atlas = ExtResource("4_jylc3")
region = Rect2(0, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd2ub"]
atlas = ExtResource("4_jylc3")
region = Rect2(140, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ptn1"]
atlas = ExtResource("4_jylc3")
region = Rect2(280, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5lwb"]
atlas = ExtResource("4_jylc3")
region = Rect2(420, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_2oy0w"]
atlas = ExtResource("4_jylc3")
region = Rect2(560, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxak8"]
atlas = ExtResource("4_jylc3")
region = Rect2(700, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnc8c"]
atlas = ExtResource("4_jylc3")
region = Rect2(840, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_srcpo"]
atlas = ExtResource("4_jylc3")
region = Rect2(980, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_0swqc"]
atlas = ExtResource("4_jylc3")
region = Rect2(1120, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_x85bf"]
atlas = ExtResource("4_jylc3")
region = Rect2(1260, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qxge"]
atlas = ExtResource("4_jylc3")
region = Rect2(1400, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_ev3qj"]
atlas = ExtResource("4_jylc3")
region = Rect2(1540, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsg4b"]
atlas = ExtResource("4_jylc3")
region = Rect2(1680, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_p21b8"]
atlas = ExtResource("4_jylc3")
region = Rect2(1820, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_bma73"]
atlas = ExtResource("4_jylc3")
region = Rect2(1960, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhs3i"]
atlas = ExtResource("4_jylc3")
region = Rect2(2100, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1gb8"]
atlas = ExtResource("4_jylc3")
region = Rect2(2240, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8loa"]
atlas = ExtResource("4_jylc3")
region = Rect2(2380, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp6yu"]
atlas = ExtResource("4_jylc3")
region = Rect2(2520, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwe16"]
atlas = ExtResource("4_jylc3")
region = Rect2(2660, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjiwq"]
atlas = ExtResource("4_jylc3")
region = Rect2(2800, 0, 140, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_uomfa"]
atlas = ExtResource("5_bijay")
region = Rect2(0, 0, 75, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_adwat"]
atlas = ExtResource("5_bijay")
region = Rect2(75, 0, 75, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2043"]
atlas = ExtResource("5_bijay")
region = Rect2(150, 0, 75, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtqyp"]
atlas = ExtResource("5_bijay")
region = Rect2(225, 0, 75, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f5ew"]
atlas = ExtResource("5_bijay")
region = Rect2(300, 0, 75, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_5da5m"]
atlas = ExtResource("5_bijay")
region = Rect2(375, 0, 75, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7xd0"]
atlas = ExtResource("5_bijay")
region = Rect2(450, 0, 75, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_owy65"]
atlas = ExtResource("5_bijay")
region = Rect2(525, 0, 75, 118)

[sub_resource type="SpriteFrames" id="SpriteFrames_xrbit"]
animations = [{
"frames": [{
"duration": 20.0,
"texture": SubResource("AtlasTexture_88faq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5dpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8xcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfstn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqns8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jvbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym8yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5vpu")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s87i4")
}],
"loop": true,
"name": &"lose",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxulh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd2ub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ptn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5lwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2oy0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxak8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnc8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srcpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0swqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x85bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qxge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev3qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsg4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p21b8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bma73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhs3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1gb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8loa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp6yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwe16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjiwq")
}],
"loop": false,
"name": &"punch",
"speed": 21.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uomfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adwat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2043")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtqyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f5ew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5da5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7xd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owy65")
}],
"loop": true,
"name": &"walk",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mevb8"]
size = Vector2(70, 121)

[node name="Olvira" type="CharacterBody2D"]
script = ExtResource("1_oqj80")
character = "OLVIRA"
difficulty = "easy"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_xrbit")
animation = &"idle"
frame_progress = 0.0600433

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_mevb8")

[node name="ButtonOptions" type="Button" parent="."]
visible = false
z_index = 1
offset_left = 12.0
offset_top = -46.0
offset_right = 20.0
offset_bottom = -38.0
theme_override_fonts/font = ExtResource("6_73o0k")
theme_override_font_sizes/font_size = 8
text = "Hablar"

[node name="PanelOptions" type="Panel" parent="."]
visible = false
z_index = 2
offset_left = 18.0
offset_top = -47.0
offset_right = 64.0
offset_bottom = 21.0

[node name="ButtonTalk" type="Button" parent="PanelOptions"]
z_index = 1
layout_mode = 0
offset_right = 46.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("6_73o0k")
theme_override_font_sizes/font_size = 8
disabled = true
text = "Preguntar"

[node name="ButtonFight" type="Button" parent="PanelOptions"]
layout_mode = 0
offset_top = 17.0
offset_right = 46.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("6_73o0k")
theme_override_font_sizes/font_size = 8
text = "Desafiar"

[node name="ButtonPunishment" type="Button" parent="PanelOptions"]
layout_mode = 0
offset_top = 34.0
offset_right = 46.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_73o0k")
theme_override_font_sizes/font_size = 8
disabled = true
text = "Castigo"

[node name="ButtonInfo" type="Button" parent="PanelOptions"]
layout_mode = 0
offset_top = 51.0
offset_right = 42.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("6_73o0k")
theme_override_font_sizes/font_size = 8
disabled = true
text = "Informacion"

[node name="PanelFight" type="Panel" parent="."]
visible = false
z_index = 3
offset_left = 18.0
offset_top = -47.0
offset_right = 64.0
offset_bottom = 4.0

[node name="ButtonReputation" type="Button" parent="PanelFight"]
z_index = 1
layout_mode = 0
offset_right = 46.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("6_73o0k")
theme_override_font_sizes/font_size = 8
text = "Reputacion"

[node name="ButtonMoney" type="Button" parent="PanelFight"]
layout_mode = 0
offset_top = 17.0
offset_right = 46.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("6_73o0k")
theme_override_font_sizes/font_size = 8
text = "Dinero"

[node name="ButtonBack" type="Button" parent="PanelFight"]
layout_mode = 0
offset_top = 34.0
offset_right = 46.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_73o0k")
theme_override_font_sizes/font_size = 8
text = "Regresar"

[node name="PanelRounds" type="Panel" parent="."]
visible = false
z_index = 4
offset_left = 18.0
offset_top = -47.0
offset_right = 64.0
offset_bottom = 21.0

[node name="ButtonVs3" type="Button" parent="PanelRounds"]
z_index = 1
layout_mode = 0
offset_right = 46.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("6_73o0k")
theme_override_font_sizes/font_size = 8
text = "3 Rondas"

[node name="ButtonVs5" type="Button" parent="PanelRounds"]
layout_mode = 0
offset_top = 17.0
offset_right = 46.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("6_73o0k")
theme_override_font_sizes/font_size = 8
text = "5 Rondas"

[node name="ButtonVs10" type="Button" parent="PanelRounds"]
layout_mode = 0
offset_top = 34.0
offset_right = 46.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_73o0k")
theme_override_font_sizes/font_size = 8
text = "10 Rondas"

[node name="ButtonBack2" type="Button" parent="PanelRounds"]
layout_mode = 0
offset_top = 51.0
offset_right = 46.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("6_73o0k")
theme_override_font_sizes/font_size = 8
text = "Regresar"

[node name="Label" type="Label" parent="."]
offset_left = -69.0
offset_top = -55.0
offset_right = -29.0
offset_bottom = -32.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_73o0k")
theme_override_font_sizes/font_size = 8

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="PanelOptions/ButtonFight" to="." method="_on_button_fight_pressed"]
[connection signal="pressed" from="PanelFight/ButtonReputation" to="." method="_on_button_reputation_pressed"]
[connection signal="pressed" from="PanelFight/ButtonMoney" to="." method="_on_button_money_pressed"]
[connection signal="pressed" from="PanelFight/ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="PanelRounds/ButtonVs3" to="." method="_on_button_vs_3_pressed"]
[connection signal="pressed" from="PanelRounds/ButtonVs5" to="." method="_on_button_vs_5_pressed"]
[connection signal="pressed" from="PanelRounds/ButtonVs10" to="." method="_on_button_vs_10_pressed"]
[connection signal="pressed" from="PanelRounds/ButtonBack2" to="." method="_on_button_back_2_pressed"]
